@@ -30,6 +30,7 @@ Version 1.4.3 - CVS
   - Norwegian Bokmal translation uses nb_NO
   - Improve display of some unparsable/absent dates (#891354).
   - Added non-anonymous LDAP bind and bind protocol patches from devel
+  - Add comment (Highest,Normal,Lowest) to X-Priority header.
 
 Version 1.4.2 - 1 October 2003
 ------------------------------
